--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -378,8 +378,6 @@ The [`fbseq`](https://github.com/wlandau/fbseq)  package has several functions f
 
 # OpenMP support
 
-As of May 27 2016, the [`fbseqOpenMP`](https://github.com/wlandau/fbseqOpenMP) package is now available to provide OpenMP support. In this backend, OpenMP threads are used for parallel computation within Markov chains. Installation is similar to the other backends, and it requires OpenMP. to run, just call `fbseq(chain, backend = "OpenMP", threads = threads)`. The default number of threads is 1.
-
-
+As of May 27 2016, the [`fbseqOpenMP`](https://github.com/wlandau/fbseqOpenMP) package is now available to provide OpenMP support. In this backend, OpenMP threads are used for parallel computation within Markov chains. Installation is similar to the other backends, and it requires OpenMP. to run, just call `fbseq(chain, backend = "OpenMP", threads = 4)`, for example. The default number of threads is 1. To check if OpenMP is correctly enabled for the package, run `fbseqOpenMP::check_OpenMP()`.
 
 # References
